--- a/todo.txt
+++ b/todo.txt
@@ -4,7 +4,7 @@
 + 5. починить поиск по словам (название препарата точно дает ошибку), и что-то вчера было за слово
 + 2,6 в поиске при выборе параграфа не разворачивается заголовок
 + 7.чтобы отображались все результаты поиска, их можно было развернуть
-8. переделать запрос, когда один препарат в нескольких группах - его выводит несколько раз в общий список
++ 8. переделать запрос, когда один препарат в нескольких группах - его выводит несколько раз в общий список
 + 9. добавить attr title Мозгорпав - поиск, Мозгорпав - статья
 10. добавить парсер для url (article = 10, search = sdfsdfs)
 + 11. когда в статье было несколько найденных слов - показывался только первый экземпляр - починил 
