--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,9 @@
 + 9. добавить attr title Мозгорпав - поиск, Мозгорпав - статья
 10. добавить парсер для url (article = 10, search = sdfsdfs)
 + 11. когда в статье было несколько найденных слов - показывался только первый экземпляр - починил 
-
++ 12. когда localStorage пустой совсем при клике по препарату выдает ошибку JS Показаны: все группы, препаратов: 3 article 1 article 2 article 3
+13. нужна ли кнопка Ξ (справа от кнопки смены темы)
++ 14. parse_articles.py -> put_articles путь исправлен
 для продакшена
 -------------------------------
 lemme -> do_search -> ~ 10 line
