--- a/todo.txt
+++ b/todo.txt
@@ -11,6 +11,7 @@
 + 12. когда localStorage пустой совсем при клике по препарату выдает ошибку JS Показаны: все группы, препаратов: 3 article 1 article 2 article 3
 13. нужна ли кнопка Ξ (справа от кнопки смены темы)
 + 14. parse_articles.py -> put_articles путь исправлен
++ 15. parse_articles.py -> если категорий не было - автоматически пишется в другие
 для продакшена
 -------------------------------
 lemme -> do_search -> ~ 10 line
@@ -19,3 +20,21 @@ conn.execute(  "CREATE  TABLE 'needle'('dict_index' INT,'order_no' INT, 'morphem
     )
 
 почистить все DEL в do_search
+
+
+
+
+
+
+
+[id:0] C:\drug_site\art5\Алпразола́м .txt...Заголовков: 1, параграфов:0
+[id:2] C:\drug_site\art5\Бупропион.txt...Заголовков: 3, параграфов:1
+[id:7] C:\drug_site\art5\Буспирон.txt...Заголовков: 8, параграфов:7
+[id:23] C:\drug_site\art5\Вальпроевая кислота.txt...Заголовков: 27, параграфов:26
+[id:77] C:\drug_site\art5\Венлафаксин.txt...Заголовков: 18, параграфов:17
+[id:113] C:\drug_site\art5\Галоперидол.txt...Заголовков: 13, параграфов:12
+[id:139] C:\drug_site\art5\Гептрал.txt...Заголовков: 10, параграфов:9
+[id:159] C:\drug_site\art5\Золпидем.txt...Заголовков: 2, параграфов:2
+[id:164] C:\drug_site\art5\Феназепам .txt...Заголовков: 2, параграфов:0
+[id:167] C:\drug_site\art5\Фенелзин.txt...Заголовков: 1, параграфов:0
+[id:169] C:\drug_site\art5\Эсциталопра́м .txt...Заголовков: 1, параграфов:0
