--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,10 @@
 13. нужна ли кнопка Ξ (справа от кнопки смены темы)
 + 14. parse_articles.py -> put_articles путь исправлен
 + 15. parse_articles.py -> если категорий не было - автоматически пишется в другие
+16. убрать из парсинга теги кроме Q P H1
+
+
+
 для продакшена
 -------------------------------
 lemme -> do_search -> ~ 10 line
